tasky-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky.local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tasky-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasky-service
                port:
                  number: 3000
